# ai_interview_bot

./: README.md
ai_interview_bot/: app.py  cc.py  pyproject.toml
ai_interview_bot/instance/: interview_practice.db
ai_interview_bot/static/css/: style.css
ai_interview_bot/static/js/: interview.js  introduction.js  main.js
ai_interview_bot/templates/: base.html  dashboard.html  history.html  index.html  interview.html  introduction.html  login.html  resume.html  signup.html
