[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "openai>=2.1.0",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.4",
    "werkzeug>=3.1.3",
]
